Form frames should not register empty access keys b=248566 r/sr=roc